# DelugeFirmware

./: .clangd  CMakeLists.txt
contrib/debug/: Debug.jdebug  RelWithDebInfo.jdebug  Tracing.JLinkScript
lib/: CMakeLists.txt
src/: AudioRecorder.cpp  Browser.cpp  MenuItemRange.cpp  QwertyUI.cpp  RenameUI.cpp  SampleLowLevelReader.cpp  SaveSongUI.cpp  VoiceSample.cpp  definitions.h  definitions_cxx.hpp  functions.cpp  numericdriver.cpp  oled.cpp  soundeditor.cpp  storagemanager.cpp
src/deluge/: arduino_json_test.cpp  deluge.cpp
src/deluge/dsp/: CMakeLists.txt  stereo_sample.h
src/deluge/dsp/blocks/: biquad.hpp  dry_wet.hpp  gain_constant.hpp  gain_ramp.hpp  midside.hpp  sum.hpp
src/deluge/dsp/blocks/filters/: biquad_fixed.hpp  biquad_float.hpp  fir.hpp
src/deluge/dsp/delay/bucket_brigade/: README.md
src/deluge/dsp/delay/tape/: delay_line.hpp  head.hpp  input_filter.hpp  tape_delay.cpp  util.hpp
src/deluge/dsp/dx/: aligned_buf.h
src/deluge/dsp/interpolate/: interpolate.h
src/deluge/dsp/oscillators/: sine_osc.h
src/deluge/dsp/processors/: gain.hpp  pan.hpp
src/deluge/dsp/util/: fixedpoint.hpp  gain_ramp.hpp  iir_coefficients.hpp  interpolated_value.hpp  stereo_delay_line.hpp
src/deluge/gui/menu_item/: decimal.cpp  decimal.h  enumeration.cpp  enumeration.h  file_selector.cpp  integer.cpp  integer.h  integer_range.cpp  integer_range.h  key_range.cpp  key_range.h  master_transpose.h  menu_item.h  multi_range.cpp  multi_range.h  param.cpp  param.h  patch_cable_strength.cpp  patch_cable_strength.h  patch_cables.cpp  patch_cables.h  patched_param.cpp  patched_param.h  range.cpp  range.h  selection.cpp  source_selection.cpp  source_selection.h  submenu.cpp  submenu.h  toggle.cpp  toggle.h  transpose.h  unpatched_param.cpp  unpatched_param.h  value.h
src/deluge/gui/menu_item/audio_clip/: sample_marker_editor.cpp
src/deluge/gui/menu_item/cv/: selection.h  volts.h
src/deluge/gui/menu_item/gate/: selection.h
src/deluge/gui/menu_item/midi/: command.cpp  command.h  devices.cpp  devices.h  preset.h
src/deluge/gui/ui/: sound_editor.cpp  sound_editor.h
src/deluge/gui/views/: arranger_view.cpp  automation_view.cpp  instrument_clip_view.cpp  performance_session_view.cpp  session_view.cpp  view.cpp
src/deluge/hid/: input_event.h
src/deluge/model/global_effectable/: global_effectable_for_clip.cpp
src/deluge/model/instrument/: kit.cpp
src/deluge/model/mod_controllable/: mod_controllable_audio.cpp
src/deluge/model/sample/: sample_low_level_reader.cpp
src/deluge/model/voice/: voice.cpp  voice.h  voice_sample.cpp
src/deluge/playback/: playback_handler.cpp
src/deluge/processing/: render_wave.h
src/deluge/processing/live/: live_pitch_shifter_play_head.cpp
src/deluge/processing/sound/: sound.cpp
src/deluge/storage/: flash_storage.cpp
src/deluge/storage/wave_table/: wave_table.cpp
src/deluge/util/: fixedpoint.h  functions.cpp  functions.h  unit_convernsions.h
src/drivers/All_CPUs/oled_low_level_all_cpus/: oled_low_level_all_cpus.c
src/drivers/All_CPUs/uart_all_cpus/: uart_all_cpus.h
(+24 files in other folders)
